<resources>
    <string name="app_name">Jelajah Bogor</string>
    <string name="artikel">Artikel</string>
    <string name="profil">Profil Saya</string>
    <string name="guide">Pemandu Wisata</string>
    <string name="DestinasiWisata">Destinasi Wisata</string>
    <string name="Hotel">Hotel</string>
    <string name="Restoran">Restoran</string>
    <string name="todo">todo</string>
    <string name="logout">Logout</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="address" />
    <string name="user1">Fauzan Rusdi</string>
    <string name="hallo_this_is_me">Hallo, Silahkan hubungi saya untuk info lebih lanjut</string>
    <string name="id_pw1">011019001</string>
    <string name="nama_guide1">Fauzan Rusdi</string>
    <string name="bahasa_guide1">Indonesia, Inggris</string>
    <string name="harga_guide1">Mulai Dari Rp. 100.000</string>
    <string name="keterangan_guide1">saya adalah...............</string>
    <string name="id_pw2">011019002</string>
    <string name="nama_guide2">Shalzaviera</string>
    <string name="bahasa_guide2">Indonesia, Inggris</string>
    <string name="keterangan_guide2">saya adalah...............</string>
    <string name="id_pw3">011019003</string>
    <string name="nama_guide3">Muhammad Farhan</string>
    <string name="bahasa_guide3">Indonesia, Inggris</string>
    <string name="keterangan_guide3">saya adalah...............</string>
    <string name="id_pw4">011019004</string>
    <string name="nama_guide4">Sharah Fadilah</string>
    <string name="bahasa_guide4">Indonesia, Inggris</string>
    <string name="keterangan_guide4">saya adalah...............</string>
    <string name="id_pw5">011019005</string>
    <string name="nama_guide5">Taufik Hermawan</string>
    <string name="bahasa_guide5">Indonesia, Inggris</string>
    <string name="keterangan_guide5">saya adalah...............</string>
    <string name="kode_destinasi1">1201</string>
    <string name="nama_destinasi1">Kebun Raya Bogor</string>
    <string name="alamat_destinasi1">Jl. Ir. H. Juanda no. 13, Bogor 16122 Indonesia</string>
    <string name="nomor_telpon_destinasi1">(0251) 8311362</string>
    <string name="jam_buka_destinasi1">08.00-17.00 WIB</string>
    <string name="harga_tiketmasuk_destinasi1">Rp15.000</string>
    <string name="rute_stasiun_destinasi1">Naik Angkot 02 Jurusan Kebun Raya Bogor</string>
    <string name="rute_terminal_destinasi1">Naik Angkutan Umum 32 Jurusan Tanah Baru</string>
    <string name="kode_destinasi2">1202</string>
    <string name="nama_destinasi2">Istana Bogor</string>
    <string name="alamat_destinasi2">Jalan Ir. H. Juanda, Paledang, Bogor Tengah, Kota Bogor, Jawa Barat</string>
    <string name="nomor_telpon_destinasi2">+62 251 8322187</string>
    <string name="jam_buka_destinasi2">08.00-16.00 WIB</string>
    <string name="harga_tiketmasuk_destinasi2">Gratis</string>
    <string name="rute_stasiun_destinasi2">Naik Angkot 02 Jurusan Istana Bogor</string>
    <string name="rute_terminal_destinasi2">Naik Angkutan Umum 10 Jurusan Istana Bogor</string>
    <string name="kode_destinasi3">1203</string>
    <string name="nama_destinasi3">Little Venice Kota Bunga Puncak Bogor</string>
    <string name="alamat_destinasi3">Jalan Hanjawar Pacet Desa Batuwalang, Cipanas, Jawa Barat</string>
    <string name="nomor_telpon_destinasi3">(0263) 580511</string>
    <string name="jam_buka_destinasi3">08.00 - 16.00 WIB</string>
    <string name="harga_tiketmasuk_destinasi3">Akhir pekan, Rp30.000 untuk anak-anak dan Rp40.000 untuk dewasa</string>
    <string name="rute_stasiun_destinasi3">Naik Angkot 02 Jurusan Kebun Raya Bogor</string>
    <string name="rute_terminal_destinasi3">Naik Angkutan Umum 32 Jurusan Tanah Baru</string>
    <string name="kode_destinasi4">1204</string>
    <string name="nama_destinasi4">Curug Bidadari Sentul Paradise Park</string>
    <string name="alamat_destinasi4">Jalan Sentul Paradise Park, Bojong Koneng, Babakan Madang, Bogor.</string>
    <string name="nomor_telpon_destinasi4">(0263) 580511</string>
    <string name="jam_buka_destinasi4">08.00 - 17.00 WIB</string>
    <string name="harga_tiketmasuk_destinasi4">	Rp25.000</string>
    <string name="rute_stasiun_destinasi4">Naik Angkot 02 Jurusan Kebun Raya Bogor</string>
    <string name="rute_terminal_destinasi4">Naik Angkutan Umum 32 Jurusan Tanah Baru</string>
    <string name="kode_destinasi5">1205</string>
    <string name="nama_destinasi5">Gunung Pancar</string>
    <string name="alamat_destinasi5">	Kecamatan Citeureup, Kabupaten Bogor, Jawa Barat</string>
    <string name="nomor_telpon_destinasi5">+62 251 8322187</string>
    <string name="jam_buka_destinasi5">24 Jam</string>
    <string name="harga_tiketmasuk_destinasi5">Biaya parkir sekitar Rp5.000 untuk motor dan Rp10.000 untuk mobil.</string>
    <string name="rute_stasiun_destinasi5">Naik Angkot 02 Jurusan Kebun Raya Bogor</string>
    <string name="rute_terminal_destinasi5">Naik Angkutan Umum 32 Jurusan Tanah Baru</string>
    <string name="kode_destinasi6">1206</string>
    <string name="nama_destinasi6">Curug Bengkok Leuwi Hejo</string>
    <string name="alamat_destinasi6">	Cibadak, Sukamakmur, Cibadak, Sukamakmur, Bogor, Jawa Barat</string>
    <string name="nomor_telpon_destinasi6">+62 251 8322187</string>
    <string name="jam_buka_destinasi6">08.00 - 16.00 WIB</string>
    <string name="harga_tiketmasuk_destinasi6">	Rp5.000</string>
    <string name="rute_stasiun_destinasi6">Naik Angkot 02 Jurusan Kebun Raya Bogor</string>
    <string name="rute_terminal_destinasi6">Naik Angkutan Umum 32 Jurusan Tanah Baru</string>
    <string name="kode_destinasi7">1207</string>
    <string name="nama_destinasi7">Jungle Land Adventure Theme Park</string>
    <string name="alamat_destinasi7">	Kawasan Sentul Nirwana, Jalan Jungleland Boulevard No. 1, Karang Tengah, Babakan Madang, Bogor, Jawa Barat</string>
    <string name="nomor_telpon_destinasi7">+62 251 8322187</string>
    <string name="jam_buka_destinasi7">	10.00-22.00 WIB</string>
    <string name="harga_tiketmasuk1_destinasi7">Rp125.000 hari biasa dan Rp175.000 akhir pekan.</string>
    <string name="judul_artikel1">8 Tips Mengatur Keuangan untuk yang Hobi Travelling</string>
    <string name="penulis_artikel1">Nimas Arini</string>
    <string name="text1_artikel1">
        Belakangan ini berlibur ke suatu tempat baru sudah menjadi sebuah kebutuhan khusus.
        Banyak yang rela menyisakan sebagian uangnya untuk merencanakan travelling dari jauh-jauh hari.
        Walaupun waktu berlibur masih jauh budget travel juga harus mulai disusun dari jauh-jauh hari.
        Berikut adalah 8 cara mengatur keuangan untuk kamu yang hobi travelling atau sedang merencanakan liburan :
    </string>
    <string name="text2_artikel1">
        Kalau kamu memang sudah berniat untuk pergi liburan artinya kamu juga harus punya komitmen untuk menabung.
        Salah satu caranya adalah langsung menyisihkan atau membagi gaji kami ke beberapa pos.
        Kebanyakan orang menabung 10% gaji mereka untuk biaya berlibur.
        Jadi enggak ada salahnya untuk langsung memisahkan biaya liburan di rekeningan tabunganmu.
    </string>
    <string name="text3_artikel1">
       Berlibur memang membutuhkan banyak biaya terutama untuk transportasi.
        Tiket pesawat menjadi salah satu penentu apakah kamu bisa berhemat selama travelling ke luar ataupun dalam negeri.
        Beli lah tiket pesawat saat ada promosi karena harganya bisa sangat murah 50%-60% lebih murah.
        Coba manfaatkan berbagai promosi di situs online dan promosi kartu kredit.
    </string>
    <string name="text4_artikel1">
        Salah satu trik lain yang bisa membuat liburan murah adalah dengan memilih penginapan yang sesuai dengan budget-mu. Jadi mending dari awal kamu sudah membuat perincian soal budget hotel misalnya dalam satu hari biaya untuk menginap Rp 350 ribu.
        Cara ini bisa membuat liburan murah meriah karena sebenarnya penginap hanya untuk tidur dan mandi saja kan. Coba pilih penginapan seperti hostel atau apartemen yang disewakan untuk menekan budget liburan.
    </string>
    <string name="text5_artikel1">
       Membuat budget, itinerary perjalanan, dan menabung harus berjalan bersama-sama. Kalau kamu sudah buat itinerary kamu langsung bisa membuat daftar pengeluranmu selama berlibur. Nah,
        kalau sudah tahu budget artinya kamu langsung bisa menabung dan mengira-ngira apakah liburanmu bisa terlaksana dalam waktu dekat.
    </string>
    <string name="text6_artikel1">
        Sekarang enggak susah menemukan tempat wisata di negara laian karena kamu bisa melihat berbagai rekomendasinya di internet. Coba deh cari tempat wisata yang enggak membutuhkan tiket masuk. Tempat wisata murah ini jumlahnya banyak loh,
        asal kamu jeli melihatnya tempat wisata murah ini kadang bisa lebih bagus dari tujuan wisata yang mainstream.
    </string>
    <string name="text7_artikel1">
        Zaman sekarang yang serba online tiket museum atau atraksi di berbagai negara bisa dibeli dengan harga murah. Di situs-situs
        online kamu bisa mendapatkan tiket tempat wisata murah dan kadang juga ada promo untuk beberapa tempat wisata. Menghemat biaya untuk tempat wisata juga bisa membuat liburan murah.
    </string>
    <string name="text8_artikel1">
        Kalau kamu berniat untuk berlibur a la backpacker murah meriah, kamu juga harus cari informasi soal promosi khusus turis.
        Promosi-promosi ini bisa sangat menguntungkan saat travelling. Beberapa kota bahkan menyediakan bis gratis untuk turis loh.
    </string>
    <string name="text9_artikel1">
    Kalau mahasiswa atau masih pelajar hal ini bisa banget mengurangi budget itinerary yang sudah kamu buat. Biasanya museum-museum memberlakukan harga pelajar untuk tiket masuknya.
        Tiket masuk museum di luar negeri harganya lumayan mahal kalau pakai kartu pelajar bisa diskon sampai 50% loh lumayan kan untuk ngirit selama travelling.
    </string>
    <string name="judul_artikel3">Mengintip Sejarah di Museum Perjuangan Bogor</string>
    <string name="text_artikel3">Pada tanggal 26 Oktober 1957, di rumah bupati Bogor saat itu, R.E Abdoellah yang terletak di jl. Panaragan 31, berkumpul puluhan pejuang kemerdekaan se-karesidenan Bogor. Mereka sepakat kalau bangunan yang berada di jalan Cikeumeuh no. 28 (sekarang jl. merdeka) itu dimanfaatkan sebagai museum perjuangan.</string>
    <string name="text2_artikel3">Pada awal mulanya, bangunan itu adalah sebuah gudang barang milik Wilhelm Sustaff Wissner, yang dimilikinya sejak 7 Juli 1879. Bangunan ini sempat berpindah tangan selama beberapa kali, bahkan pernah digunakan sebagai kantor perusahaan dan gedung persaudaraan Parindra (Partai Indonesia Raya) cabang Bogor pada Juni 1938.
        Setelah kedatangan militer Jepang, pada 9 Maret 1942 bangunan ini dimanfaatkan menjadi sebuah gudang penyimpanan.</string>
    <string name="text3_artikel3">Sekitar tahun 1945-an, bangunan ini sering menjadi tempat berkumpulnya laskar rakyat dan beberapa organisasi perjuangan lainnya. Tokoh-tokoh besar seperti Kapten Muslihat, Mayor Oking, dan Margonda pun sering mengadakan pertemuan di gedung ini. Pada tahun 1949, bangunan ini sempat menjadi kantor pemerintah darurat kabupaten,
        dan di tahun 1952 pernah digunakan menjadi sebuah Sekolah Rakjat atau SR.</string>
    <string name="text4_artikel3">Pelantikan dewan pengurus Yayasan Museum Perjoangan Bogor dilakukan pada tanggal 10 November 1957. Dalam kesempatan tersebut, istri Kapten Muslihat, Kartinah Muslihat berkenan melantik para pengurus yayasan tersebut. Tidak berapa lama, muncul surat keputusan Pelaksana Kuasa Militer Daerah Res. Inf 8/III-No.Kpts/3/7/PKM/57 yang isinya tentang arahan kepada para pengurus yayasan untuk segera mempersiapkan dan
        mengusahakan agar gedung Museum Perjoangan bisa segera diwujudkan dan diresmikan pada tanggal 17 Agustus 1958.</string>
</resources>