<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailArtikel3"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/Scroolview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:src="@drawable/artikel3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:gravity="center_vertical"
                    android:text="@string/judul_artikel3"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="cursive"
                    android:gravity="center_vertical"
                    android:text="@string/penulis_artikel1"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_margin="5dp"
                    android:fontFamily="serif"
                    android:gravity="center_vertical"
                    android:text="@string/text_artikel3"
                    android:textColor="@color/text"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_margin="5dp"
                    android:fontFamily="serif"
                    android:gravity="center_vertical"
                    android:text="@string/text2_artikel3"
                    android:textColor="@color/text"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_margin="5dp"
                    android:fontFamily="serif"
                    android:gravity="center_vertical"
                    android:text="@string/text3_artikel3"
                    android:textColor="@color/text"
                    android:textSize="15sp"
                    android:textStyle="normal" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_margin="5dp"
                    android:fontFamily="serif"
                    android:gravity="center_vertical"
                    android:text="@string/text4_artikel3"
                    android:textColor="@color/text"
                    android:textSize="15sp"
                    android:textStyle="normal" />






            </LinearLayout>

        </LinearLayout>

    </ScrollView>




</LinearLayout>